@@ -104,7 +104,6 @@ class ApiLogin extends ApiBase {
 				$result['lgusername'] = $_SESSION['wsUserName'];
 				$result['lgtoken'] = $_SESSION['wsToken'];
 				$result['cookieprefix'] = $wgCookiePrefix;
-				$result['sessionid'] = $_COOKIE["{$wgCookiePrefix}_session"];
 				break;
 
 			case LoginForm :: NO_NAME :
